Added RecyclerView and Card View Forced Portrait Orientation Mimic example app for Rx driven Lifecycle Architecture components Implement AppDelegate to get AppCompat functionality Some restructuring

--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">TheAccountingApp</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_notifications">Notifications</string>'
+    <string name="app_version"></string>
 </resources>
