--- a/TheAccountingApp/app/src/main/res/values/strings.xml
+++ b/TheAccountingApp/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>'
     <string name="profile">Profile</string>
+    <string name="username">User Name</string>
 </resources>
